--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bullmq": "^5.52.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dayjs": "^1.11.13",
     "mongoose": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
