--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.1",
+    "@nestjs/websockets": "^11.1.1",
     "bullmq": "^5.52.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
