--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "utc": "^0.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
