--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "dotenv": "^16.5.0",
     "joi": "^17.13.3",
     "mongoose": "^8.14.1",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "utc": "^0.1.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
