--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "socket.io": "^4.8.1",
     "utc": "^0.1.0",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
