microservices config init

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,9 @@ REDIS_URI=
 REDIS_PORT=
 
 PATH_WS=game/space-roulette
+
+
+RABBITMQ_USER=
+RABBITMQ_PASS=
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
