--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-socket.io": "^11.1.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.1",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "bullmq": "^5.52.2",
     "cache-manager": "^6.4.3",
     "class-transformer": "^0.5.1",
