--- a/.env.template
+++ b/.env.template
@@ -8,7 +8,7 @@ REDIS_PORT=
 PATH_WS=game/space-roulette
 
 
-RABBITMQ_USER=
-RABBITMQ_PASS=
+RABBITMQ_USER=gues
+RABBITMQ_PASS=gues
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
