--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4000:4000"      
+    env_file:
+      - .env
     volumes:
       - .:/usr/src/app # Mount the current directory to the container
       - /usr/src/app/node_modules # Exclude node_modules from being overwritten
